--- a/misc/dosbox.html
+++ b/misc/dosbox.html
@@ -10,6 +10,13 @@
 <title>Eymen's Minecraft Website 1.0</title>
 </head>
 <body>
+<style>
+            canvas {
+            display: block;
+            margin: auto;
+            border: 2px solid black;
+        }
+</style>    
 <table border="2"><tr style="background-color: powderblue"><td>
 <div style="display: inline-block;"><h1 class="buyuk">Eymen's</h1></div><div style="display: inline-block;"><img src="/assets/oldmclogo.jpeg"></div><div style="display: inline-block;"><h1 class="buyuk">Website</h1></div><br><font color="red"><div style="display: inline-block;"><h3>By: EymenWinnerYT</h3><h3>Version: 1.0</h3></font></td>
 </td></tr><tr style="background-color: powderblue"><td>
