--- a/misc/dosbox.html
+++ b/misc/dosbox.html
@@ -28,30 +28,32 @@
     <a href="about.html" target="_blank">About</a>    
 </td></tr><tr><td>"
 <br><br><h2>Dosbox Emulator</h2><br><h3>Here is the DosBox emulator in web, it is powered by JS-DOS and you can run old games and applications<br>with this.</h3><br><br><br>
-<canvas id="dosbox" width="640" height="400"></canvas>
-<script src="https://js-dos.com/cdn/js-dos.js"></script>
+<canvas id="jsdos"></canvas>
+<script src="https://js-dos.com/6.22/current/js-dos.js"></script>
 <script>
-    console.log("Before JS-DOS initialization");
-    var canvas = document.getElementById('dosbox');
-    var dosbox = new Dosbox({
-        id: 'dosbox',
-        wdosboxUrl: 'https://js-dos.com/cdn/wdosbox.js',
-        onRun: function (dosbox) {
-            // You can leave this empty since you don't want to run any program immediately
-        },
-        onProgress: function (dosbox, progress) {
-            console.log(progress);
-        }
-    });
+    function get(url) {
+        return new Promise(function(resolve, reject) {
+            var xhr = new XMLHttpRequest();
+            xhr.onload = function() {
+                resolve(xhr.response);
+            };
+            xhr.onerror = reject;
+            xhr.open('GET', url);
+            xhr.send();
+        });
+    }
 
-    dosbox.ui.on('load', function (item) {
-        console.log("JS-DOS loaded:", item);
-        if (item === 'https://js-dos.com/cdn/wdosbox.js') {
-            // This function will be called once the wdosbox.js file is loaded
-            // You can optionally display the index menu here
-            dosbox.run("dir");
-        }
+    const confPromise = get("URL_TO_YOUR_DOSBOX_CONF_FILE");
+
+    Dos(document.getElementById("jsdos"), {
+        wdosboxUrl: "https://js-dos.com/6.22/current/wdosbox.js"
+    }).ready((fs, main) => {
+        confPromise.then((conf) => {
+            fs.extract("URL_TO_YOUR_GAME_OR_APPLICATION_ZIP_FILE").then(() => {
+                fs.createFile("dosbox.conf", conf);
+                main(["-conf", "dosbox.conf", "-c", "DOOM.EXE"])
+            });
+        });
     });
-    console.log("After JS-DOS initialization");
 </script>
 </td></tr></table></body></html>
