--- a/misc/dosbox.html
+++ b/misc/dosbox.html
@@ -28,7 +28,7 @@
     <a href="about.html" target="_blank">About</a>    
 </td></tr><tr><td>"
 <br><br><h2>Dosbox Emulator</h2><br><h3>Here is the DosBox emulator in web, it is powered by JS-DOS and you can run old games and applications<br>with this.</h3><br><br><br>
-<canvas id="jsdos"></canvas>
+<canvas id="jsdos" width="640" height="400"></canvas>
 <script src="https://js-dos.com/6.22/current/js-dos.js"></script>
 <script>
     function get(url) {
