--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+<meta name="description" content="EymenWinnerYT's Official GitHub Website.">
+<meta name="keywords" content="software, android, minecraft, eymenwinneryt, eymen">
+<meta name="author" content="EymenWinnerYT">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <title>EymenWinnerYT Freeware Official Website!</title>   
 <style>
 body {background-image: url('https://web.archive.org/web/19961023235157id_/http://windows95.com/gifs/back/sky_tile.gif');}
