--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {background-image: url('https://web.archive.org/web/19961023235157id_/http:
 </style> 
 </head>    
 <body>
-<h4>WELCCOME TO EYMENWINNERYT FREEWARE OFFIIAL WEBSITE&trade;</h4><br>
+<h4>WELCOME TO EYMENWINNERYT FREEWARE OFFIIAL WEBSITE&trade;</h4><br>
 <a href="/"><h3>Home</h3></a><a href="about.html"><h3>About</h3></a><a href="contact.html"><h3>Contact</h3></a>
 <hr><br><br>
 <div class="white-bg"><marquee direction="left"><h3 class="blue"><i></i></h3></marquee></div>
