--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {background-image: url('https://web.archive.org/web/19961023235157id_/http:
 <h4>WELCOME TO EYMENWINNERYT FREEWARE OFFIIAL WEBSITE&trade;</h4><br>
 <a href="/"><h3>Home</h3></a><a href="about.html"><h3>About</h3></a><a href="contact.html"><h3>Contact</h3></a>
 <hr><br><br>
-<div class="white-bg"><marquee direction="left"><h3 class="blue"><i></i></h3></marquee></div>
+<div class="white-bg"><marquee direction="left"><h3 class="blue"><i>Welcome to eymenwinneryt.github.io,,, Apps, games and some personal stuff.. This is my personal website and i like creating content and coding by the way subscribe to my <a href="https://www.youtube.com/@someguy-3232">YouTube</a> channel for support me :D</i></h3></marquee></div>
 <h2>Current projects:</h2>
 <h4>[App] Minecraft PE Server List 2024 (unfinished)</h4>        
 </body>
