--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <style>
 body {background-image: url('https://web.archive.org/web/19961023235157id_/http://windows95.com/gifs/back/sky_tile.gif');}
 .white-bg {background-color: white;}
-.blue {color: blue;}    
+.blue {color: blue;}
+.right-sided {text-align: right;}   
+.in-same-line {display: inline-block;} 
 </style> 
 </head>    
 <body>
@@ -18,7 +20,8 @@ body {background-image: url('https://web.archive.org/web/19961023235157id_/http:
 <a href="/"><h3>Home</h3></a><a href="about.html"><h3>About</h3></a><a href="contact.html"><h3>Contact</h3></a>
 <hr><br><br>
 <div class="white-bg"><marquee direction="left"><h3 class="blue"><i>Welcome to eymenwinneryt.github.io,,, Apps, games and some personal stuff.. This is my personal website and i like creating content and coding by the way subscribe to my <a href="https://www.youtube.com/@someguy-3232">YouTube</a> channel for support me :D</i></h3></marquee></div>
-<h2>Current projects:</h2>
-<h4>[App] Minecraft PE Server List 2024 (unfinished)</h4>        
+<img class="right-sided" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Logo_YouTube_por_Hernando_%282005-2011%29.svg/1600px-Logo_YouTube_por_Hernando_%282005-2011%29.svg.png">
+<div class="in-same-line"><h2>Current projects:</h2></div>
+<div class="in-same-line"><h4>[App] Minecraft PE Server List 2024 (unfinished)</h4></div>        
 </body>
 </html>
