--- a/irc.html
+++ b/irc.html
@@ -14,4 +14,4 @@ body {background-image: url('https://web.archive.org/web/19961023235157id_/http:
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 <iframe src="/qwebirc/"></iframe>
 <br><br>
-<h3>Here is my IRC Server, you must see an IRC Client window above.<br> If you dont see anything you can use modern browsers or IRC Client.<br> Example i use <a href="https://adilirc.com">AdilIRC</a>.</h3>
+<h3>Here is my IRC Server, you must see an IRC Client window above.<br> If you dont see anything you can use modern browsers or IRC Client.<br> Example i use <a href="https://adiirc.com">AdiIRC</a>.</h3>
