--- a/eymchatspammer/index.html
+++ b/eymchatspammer/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="software, android, minecraft, eymenwinneryt, eymen">
 <meta name="author" content="EymenWinnerYT">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-<title>EymenWinnerYT Freeware Official Website!</title>   
+<title>EymenWinnerYT's Chat Spammer</title>   
 <style>
 body {background-image: url('https://web.archive.org/web/19961023235157id_/http://windows95.com/gifs/back/sky_tile.gif');}
 .white-bg {background-color: white;}
