--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ body {background-image: url('https://web.archive.org/web/19961023235157id_/http:
 <div class="right-sided"><a href="https://www.youtube.com/@someguy-3232"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Logo_YouTube_por_Hernando_%282005-2011%29.svg/1600px-Logo_YouTube_por_Hernando_%282005-2011%29.svg.png" width="350" height="150"></a><br><h2><a href="irc.html">Join IRC Server</a></h2></div>
 <h2>Current projects:</h2>
 <div class="in-same-line"><h3>[App] Minecraft PE Server List 2024 (unfinished)</h3></div>     
-<div class="in-same-line"><a href="/eymchatspammer/"<h3>Minecraft Chat Spammer</h3></div>   
+<div class="in-same-line"><a href="/eymchatspammer/"><h3>Minecraft Chat Spammer</h3></a></div>   
 </body>
 </html>
